@@ -37,9 +37,8 @@
   "reportOptionalIterable": "warning",
   "reportOptionalMemberAccess": "warning",
   "reportOptionalSubscript": "warning",
-  // TODO: Leave Unbound/Undefined to their own PR(s)
+  // TODO: Leave Unbound to its own PR(s)
   "reportUnboundVariable": "warning",
-  "reportUndefinedVariable": "warning",
   // Too many dynamically generated modules. This will require type stubs to properly fix.
   "reportMissingImports": "warning",
   // IDEM, but happens when pywin32 is not in site-packages but module is found from typeshed.
