@@ -14,6 +14,8 @@ https://mhammond.github.io/pywin32_installers.html.
 Coming in build 308, as yet unreleased
 --------------------------------------
 
+* Fixed undefined error in `pywin.debugger.debugger` when an invalid debugger state is passed (#2284, @Avasam)
+
 Build 307, released 2024-10-04
 ------------------------------
 ### Release process changes
